# simple_qem

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: lib.rs  manifold.rs  parameters.rs  qem.rs  quadric.rs  svd.rs  sym.rs  vec.rs
